Add homepage header

--- a/site/en/discover/home.njk
+++ b/site/en/discover/home.njk
@@ -21,6 +21,17 @@ permalink: '/discover/'
 {% endmacro %}
 
 <div class="_discover-home">
+  <header class="_dheader">
+    <div class="_dheader--inner">
+      <div class="_dheader--text">
+        <h1 class="type--h1">Optimized for your Chromebook</h1>
+        <p>Experience these apps and games on your Chromebook's larger screen—they'll also work well with your keyboard and mouse.</p>
+      </div>
+
+      <img class="_dheader--bkg _dheader--img" src="ix://discover/home/background.svg" aria-hidden="true" alt="" />
+      <img class="_dheader--shapes _dheader--img" src="ix://discover/home/shapes.svg" aria-hidden="true" alt="" />
+    </div>
+  </header>
   <section class="_discover-home--section">
     <h2 class="type--h2 _discover-home--section-title">Apps</h2>
     <ul class="_discover-home--grid">
